@@ -2,6 +2,12 @@
 Version 1.6.7
 *******************************************************************************
 
+2010-09-07 Marcelo Jimenez <mroberto(at)users.sourceforge.net>
+	Fix compilation error in ixml/inc/ixml.h when compiling with an
+	Objective-C compiler (when cross-compiling for iPhone devices).
+
+	Patch submitted by Chandra (inactiveneurons).
+
 2010-08-21 Marcelo Jimenez <mroberto(at)users.sourceforge.net>
 	* Issue regarding the GENA notifications. A string termination indicator
 	was added at the end of the notification ("\r\n") in
